--- a/elleestaunord/static/css/ele.css
+++ b/elleestaunord/static/css/ele.css
@@ -83,7 +83,8 @@
 }
 
 .intro_portfolio {
-    float: left;
+    background-color: rgba(0, 0, 0, .1);
+    padding: 1%;
 }
 
 .hire_me {
@@ -99,9 +100,14 @@
     text-shadow: #16a085 0px 0px 0px, #16a085 0px 1px 0px, #16a085 0px 2px 0px, #16a085 -1px 3px 0px, #3366cc -2px 4px 0px, #3366cc -3px 5px 0px, #3366cc -4px 6px 0px;
 }
 
+.intro_pp {
+    background-color: rgba(0, 0, 0, .1);
+    padding: 1%;
+}
+
 .projects {
     clear: both;
-    margin: 2% 0;
+    margin-bottom: 2%;
     padding: 1%;
     display: flex;
     flex-wrap: wrap;
@@ -109,7 +115,7 @@
     justify-content: start;
     max-width: 100%;
     max-height: 100%;
-    background-color: rgba(114, 159, 207, .6);
+    background-color: rgba(114, 159, 207, .75);
     border-radius: 4px;
     overflow: hidden;
 }
@@ -191,12 +197,12 @@
     font-weight: bold;
 }
 #about_me h3 span {
-    background-color: rgba(22, 160, 133, 0.7);
+    background-color: rgba(22, 160, 133, 0.75);
 }
 
 #about_me .introduction {
     margin-top: 8%;
-    background-color: rgba(114, 159, 207, 0.5);
+    background-color: rgba(114, 159, 207, 0.8);
     padding: 2%;
     border-radius: 4px;
     /*max-width: 100%;*/
